--- a/Maquetado/main.css
+++ b/Maquetado/main.css
@@ -7,6 +7,10 @@
     --avatar-size: 8rem;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     background-color: var(--bg-color);
