Add sections About, Experience, Education, Skills, Projects

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,6 +20,11 @@ body {
     color: #ddd;
 }
 
+/* ___________________________________________MAIN */
+
+main {
+    margin: 0 2rem;
+}
 /* ___________________________________________COMPONENTS */
 
 
