--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,11 @@
   <app-top-nav-bar></app-top-nav-bar>
   <app-banner></app-banner>
 </header>
+<main>
+  <app-about></app-about>
+  <app-experience></app-experience>
+  <app-education></app-education>
+  <app-skills></app-skills>
+  <app-projects></app-projects>
+
+</main>
