feat: add content to About section

--- a/src/app/about/about/about.component.html
+++ b/src/app/about/about/about.component.html
@@ -1,1 +1,10 @@
-<p>about works!</p>
+<section id="about">
+    <div class="name-container">
+        <h1 class="fullname">Jhon Frederic Doe</h1>
+        <h2 class="title">Jr. Fullstack developer</h2>
+    </div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente suscipit similique rem voluptas.
+        Accusamus alias temporibus optio dignissimos? Fugiat culpa, ad voluptate ipsam aliquid dignissimos
+        voluptatibus odio dolores veritatis qui.</p>
+    <i class="fas fa-pencil-alt edit-btn"></i>
+</section>
