--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,13 @@ body {
 main {
     margin: 0 2rem;
 }
+
+section {
+    position: relative;
+    margin-bottom: 1rem;
+    padding: 0 1rem;
+}
+
 /* ___________________________________________COMPONENTS */
 
 
