feat: add experience section components

--- a/src/app/experience/experience/experience.component.html
+++ b/src/app/experience/experience/experience.component.html
@@ -1,1 +1,5 @@
-<p>experience works!</p>
+<section class="card" id="experience-section">
+    <h2>Experiencia</h2>
+    <app-experience-list></app-experience-list>
+    <i class="fas fa-pencil-alt edit-btn"></i>
+</section>
