--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,18 @@ section {
     padding: 0 1rem;
 }
 
+.card {
+    padding: 1rem;
+    border-radius: 0.2rem;
+    background-color: var(--card-bg-color);
+
+    border: 1px solid rgb(15, 6, 6);
+}
+
+.card h2 {
+    margin: 0 0 0.5rem 0;
+}
+
 /* ___________________________________________COMPONENTS */
 
 
