feat: add Education section components

--- a/src/app/education/education/education.component.html
+++ b/src/app/education/education/education.component.html
@@ -1,1 +1,7 @@
-<p>education works!</p>
+<section class="card" id="education-section">
+
+    <h2>Educación</h2>
+    <app-education-list></app-education-list>
+    <i class="fas fa-pencil-alt edit-btn"></i>
+
+</section>
