feat: add Skills section components

--- a/src/app/skills/skills/skills.component.html
+++ b/src/app/skills/skills/skills.component.html
@@ -1,1 +1,5 @@
-<p>skills works!</p>
+<section class="card" id="skills-section">
+    <h2>Skills</h2>
+        <app-skill-list></app-skill-list>
+    <i class="fas fa-pencil-alt edit-btn"></i>
+</section>
