feat: add Projects section components

--- a/src/app/projects/projects/projects.component.html
+++ b/src/app/projects/projects/projects.component.html
@@ -1,1 +1,5 @@
-<p>projects works!</p>
+<section class="card" id="projects-section">
+    <h2>Proyectos</h2>
+        <app-projects-list></app-projects-list>
+    <i class="fas fa-pencil-alt edit-btn"></i>
+</section>
