fix: top-nav-bar logo

--- a/src/app/header/top-nav-bar/top-nav-bar.component.html
+++ b/src/app/header/top-nav-bar/top-nav-bar.component.html
@@ -1,5 +1,6 @@
 <nav>
     <div class="Logo">
+        <img src="../../../assets/img/Header-logo.png"
             alt="">
     </div>
     <div class="social-media">
