--- a/src/app/header/banner/banner.component.scss
+++ b/src/app/header/banner/banner.component.scss
@@ -17,3 +17,29 @@
 
     box-shadow: 0px 0px 5px 5px rgba(20, 20, 50, 0.5);
 }
+
+
+@media (max-width: 768px) {
+
+    :host {
+        margin: 1.5rem 1.5rem 0 1.5rem;
+    }
+
+    .banner__img {
+        height: 15rem;
+    }
+
+}
+
+@media (max-width: 640px) {
+
+    :host {
+        margin: 1rem 1rem 0 1rem;
+    }
+
+    .banner__img {
+        height: 12.5rem;
+    }
+
+
+}
